--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,2 +1,12 @@
 //全局样式文件
 @import './icon.less';
+.body{
+    background-color: #F5F7F9;
+}
+.page-nav-bar{
+    background-color: #3296fa !important;
+    .van-nav-bar__title, 
+    .van-icon{
+        color: #fff !important;
+    }
+}
